AC_INIT(config.h)
AC_SET_MAKE
AC_PROG_CC
AC_ARG_PROGRAM
AC_ISC_POSIX
AC_PROG_YACC

rm -f configure.h

dnl We need at *least* glib 1.2.0
AM_PATH_GLIB(1.2.0, ,
             AC_MSG_ERROR(Cannot find GLIB: Is glib-config in path?))

glib_cflags="$GLIB_CFLAGS"
glib_libs="$GLIB_LIBS"
AC_SUBST(glib_cflags)
AC_SUBST(glib_libs)

CFLAGS="$CFLAGS -L/usr/lib/news -I/usr/local/include -L/usr/local/lib $GLIB_CFLAGS $GLIB_LIBS"
			
AC_SUBST(X_CFLAGS)
	
AC_CHECK_LIB(gmime, g_mime_message_get_sender, GMIME="-lgmime")
if test "$GMIME" = ""; then
   echo "No gmime library found.  mdb needs at least gmime 1.0.6"
   exit 1
fi
	
AC_CHECK_HEADERS(compface.h, [], [ echo "You need the compface header files"; exit 1 ])

AC_CHECK_LIB(compface, UnGenFace, [], [
	echo "No compface library found"
        exit 1
])
	
AC_CHECK_HEADERS(magick/api.h, [], [ echo "You need the ImageMagick header files"; exit 1 ])

AC_CHECK_LIB(Magick, InitializeMagick, [], [
	echo "No Magick library found"
        exit 1
])
	
#AC_CHECK_HEADERS(libxml/HTMLparser.h, [], [ echo "You need the xml2 header files"; exit 1 ])

#AC_CHECK_LIB(xml2, htmlParseDoc, [], [
#	echo "xml2 libraries not found"
#        exit 1
#])
	
#AC_CHECK_HEADERS(libxslt/xsltInternals.h, [], [ echo "You need the xslt header files"; exit 1 ])

#AC_CHECK_LIB(xslt, xsltParseStylesheetDoc, [], [
#	echo "xslt libraries not found"
#        exit 1
#])
	
#AC_CHECK_LIB(inn, parsedate, INN="-linn")
#if test "$INN" = ""; then
#   echo "No INN library found."
#   exit 1
#fi

echo "#define TEXTS_DIRECTORY \"$PWD/texts\"" >> configure.h
	
AC_OUTPUT(Makefile)
